--- a/DLLINJECT/DLLINJECT/DLLINJECT.vcxproj
+++ b/DLLINJECT/DLLINJECT/DLLINJECT.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{F05D6D4B-E41F-4A17-9844-4351FBF314AE}</ProjectGuid>
+    <ProjectGuid>{83464885-DD08-4488-A09D-A7C0B1FCE885}</ProjectGuid>
     <Keyword>MFCProj</Keyword>
-    <RootNamespace>PETOOL</RootNamespace>
+    <RootNamespace>DLLINJECT</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -188,31 +188,31 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DLLINJECT.h" />
+    <ClInclude Include="DLLINJECTDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="PETOOL.h" />
-    <ClInclude Include="PETOOLDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DLLINJECT.cpp" />
+    <ClCompile Include="DLLINJECTDlg.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="PETOOL.cpp" />
-    <ClCompile Include="PETOOLDlg.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="PETOOL.rc" />
+    <ResourceCompile Include="DLLINJECT.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\PETOOL.rc2" />
+    <None Include="res\DLLINJECT.rc2" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\PETOOL.ico" />
+    <Image Include="res\DLLINJECT.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
